--- a/policy.html
+++ b/policy.html
@@ -42,7 +42,7 @@
 <div class="su-spacer" style="height:20px"></div>
 <h2>Who we are</h2>
 <p>nbanbi development company specializing in creative tools for artists. Our flagship product is nbanbi, a simple and stylish digital painting product that presents a high technology paint simulation in an easy to use interface that lets anyone play with paint, available across a range of platforms. To learn more about us: <a >nbanbi</a></p>
-<p><strong>Our website address is:</strong> <a href="https://3dpinball.github.io/">https://3dpinball.github.io/</a></p>
+<p><strong>Our website address is:</strong> <a href="">https://3dpinball.github.io/</a></p>
 <div class="su-spacer" style="height:20px"></div>
 <h2>nbanbi Software</h2>
 <h3>nbanbi Desktop Editions</h3>
